--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,27 +148,28 @@
                 android:textSize="17dp"
                 android:textColorHint="#808080" />
 
-            <!-- Username -->
+            <!-- Password -->
             <TextView
+                android:textSize="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:text="Branch Code*"
+                android:text="Date of Birth*"
                 android:textColor="#333"
-                android:textSize="16dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginBottom="4dp"/>
 
             <EditText
-                android:id="@+id/branchcode"
-                android:hint="Enter Branch Code"
+                android:textSize="16dp"
+                android:maxLength="10"
+                android:hint="DD-MM-YYYY"
+                android:id="@+id/dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/edit_text_selector"
-                android:inputType="text"
                 android:padding="7dp"
-                android:textSize="17dp"
-                android:textColorHint="#808080" />
+                android:textColorHint="#808080"
+                android:background="@drawable/edit_text_selector"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
