--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,7 +153,7 @@
                 android:textSize="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date of Birth*"
+                android:text="Branch Code*"
                 android:textColor="#333"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp"/>
@@ -161,11 +161,10 @@
             <EditText
                 android:textSize="16dp"
                 android:maxLength="10"
-                android:hint="DD-MM-YYYY"
-                android:id="@+id/dob"
+                android:hint="Enter Branch Code"
+                android:id="@+id/branchcode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:layout_marginBottom="16dp"
                 android:padding="7dp"
                 android:textColorHint="#808080"
