--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -54,12 +54,34 @@
                 android:layout_marginBottom="16dp"/>
 
 
-            <!-- Mobile -->
             <TextView
                 android:textSize="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Expired Date*"
+                android:text="Date of Birth*"
+                android:textColor="#333"
+                android:textStyle="bold"
+                android:layout_marginBottom="4dp"/>
+
+            <EditText
+                android:textSize="16dp"
+                android:layout_width="match_parent"
+                android:id="@+id/dob"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:layout_marginBottom="16dp"
+                android:padding="7dp"
+                android:maxLength="10"
+                android:hint="DD/MM/YYYY"
+                android:textColorHint="#808080"
+                android:background="@drawable/edit_text_selector"/>
+
+
+            <TextView
+                android:textSize="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Card Expired Date*"
                 android:textColor="#333"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp"/>
