--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -89,11 +89,10 @@
                 android:layout_width="match_parent"
                 android:id="@+id/pass"
                 android:layout_height="wrap_content"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
                 android:layout_marginBottom="16dp"
                 android:padding="7dp"
                 android:textColorHint="#808080"
-                android:maxLength="11"
                 android:background="@drawable/edit_text_selector"/>
 
 
